# smolgl-framework

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  \  cmake_install.cmake  compile_commands.json
.cache/clangd/index/: _fixes.hpp.58B6B3AC5EF21AC2.idx  _fixes.hpp.8299B99AA9DB690B.idx  _fixes.hpp.C622109AF70A4887.idx  _vectorize.hpp.00C0ED99C961FD69.idx  _vectorize.hpp.117B5FA8F3A29EEB.idx  _vectorize.hpp.F5CCE60FB89DDDD8.idx  aabb.hpp.8381E2835C5A8F67.idx  animator_system.hpp.039EE3EB3EEFBC66.idx  animator_system.hpp.409835488A1B0897.idx  behavior_system.cpp.4A928059686847AC.idx  behavior_system.cpp.FE137B5979331984.idx  behavior_system.hpp.093115EE35BECCAC.idx  behavior_system.hpp.C62C133CD95E9F5E.idx  camera.cpp.14293381273635D5.idx  camera.cpp.CC413D7E85E7148B.idx  camera.cpp.CDA514C1637DB635.idx  camera.hpp.670B8DF24323F088.idx  camera.hpp.8E7B176C6FE81AFA.idx  camera.hpp.DF3D31FB62BF56FE.idx  chunk.hpp.4FC9065B896FDEF4.idx  collision.hpp.922501AC4C89E1A4.idx  color.hpp.770B7D855F2F6B43.idx  color.hpp.8F7AE29AC065B450.idx  color.hpp.BBB6BA34AE7D5DB5.idx  (+686 more)
assets/shaders/: circle_fragment.glsl  default_fragment.glsl  default_textured_fragment.glsl  default_textured_vertex.glsl  grid_fragment.glsl  line_vertex.glsl  water_fragment.glsl
src/: main.cpp
src/battleship/: CMakeLists.txt  main.cpp
src/battleship/board/: board.cpp  board.hpp
src/battleship/game/: game.cpp  game.hpp
src/battleship/player/: player.cpp  player.hpp
src/engine/: CMakeLists.txt  Makefile  cmake_install.cmake
src/engine/assets/default_shaders/: default_fragment.glsl
src/engine/camera/: camera.cpp  camera.hpp
src/engine/core/: engine.cpp  engine.hpp
src/engine/ecs/: ecs.cpp  ecs.hpp
src/engine/ecs/components/: components.hpp
src/engine/ecs/systems/animator_system/: animator_system.cpp  animator_system.hpp
src/engine/ecs/systems/behavior_system/: behavior_system.cpp  behavior_system.hpp
src/engine/ecs/systems/physics_system/: physics_system.cpp  physics_system.hpp
src/engine/ecs/systems/sprite_system/: sprite_system.cpp  sprite_system.hpp
src/engine/ecs/systems/textured_sprite_system/: textured_sprite_system.cpp  textured_sprite_system.hpp
src/engine/ecs/systems/transform_system/: transform_system.cpp  transform_system.hpp
src/engine/font_render/: font_render.cpp  font_render.hpp
src/engine/gl/: gl_layer.cpp  gl_layer.hpp
src/engine/input/: input.cpp  input.hpp
src/engine/math/: vector2f.cpp  vector2f.hpp
src/engine/physics/: aabb.cpp  aabb.hpp  collision.hpp  ray.cpp  ray.hpp  rect.cpp  rect.hpp
src/engine/render/mesh/: mesh.cpp  mesh.hpp
src/engine/render/mesh_types/: line.cpp  line.hpp
src/engine/scene/: scene.cpp  scene.hpp
src/engine/shader/: shader.cpp  shader.hpp
src/engine/shader_pool/: shader_pool.cpp  shader_pool.hpp
src/engine/src/camera/: camera.cpp
src/engine/src/ecs/: ecs.cpp
src/engine/src/ecs/systems/animator_system/: animator_system.cpp
src/engine/src/ecs/systems/behavior_system/: behavior_system.cpp
src/engine/src/ecs/systems/physics_system/: physics_system.cpp
src/engine/src/ecs/systems/sprite_system/: sprite_system.cpp
src/engine/src/ecs/systems/textured_sprite_system/: textured_sprite_system.cpp
src/engine/src/ecs/systems/transform_system/: transform_system.cpp
src/engine/src/font/: font.cpp
src/engine/src/font_pool/: font_pool.cpp
src/engine/src/gl/: gl_layer.cpp
src/engine/src/input/: input.cpp
src/engine/src/physics/: aabb.cpp  ray.cpp
src/engine/src/render/mesh/: mesh.cpp
src/engine/src/render/mesh_types/: line.cpp  simple_batch.cpp
src/engine/src/scene/: scene.cpp
src/engine/src/shader/: shader.cpp
src/engine/src/shader_pool/: shader_pool.cpp
src/engine/src/texture/: texture.cpp
src/engine/src/texture_pool/: texture_pool.cpp
src/engine/src/utils/: file.cpp
src/engine/src/utils/time/: time.cpp
src/engine/src/window/: window.cpp
src/engine/texture/: texture.cpp  texture.hpp
src/engine/texture_pool/: texture_pool.cpp  texture_pool.hpp
src/engine/utils/: stb_impl.cpp
src/engine/utils/time/: time.cpp  time.hpp
src/engine/window/: window.cpp  window.hpp
src/game_of_life/: CMakeLists.txt  Game_Of_Life  Makefile  cmake_install.cmake  main.cpp
src/game_of_life/assets/: 50_26.mp
src/game_of_life/world/: world.cpp  world.hpp
src/test/: CMakeLists.txt  main.cpp
src/virus_io/: CMakeLists.txt  main.cpp
(+25 files in other folders)
